Added 2 blocks of site
•Features of app added - adaptive
•Our Design Guidelines added
•Added Gradient-Map-Background-block
•Fix h1 problems on site
•Divide class "Header_LeftForm" on "Header_LeftForm" and "Header_LeftForm_Text" to avoid code-repeating.
•Fixed text in "PhoneTop" field

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
             <!-- <div class="Separator">
             </div> -->
             <div class="Header_LeftForm">
-                <h1 >Push yourself & your designs</h1>
-                <p class="Header_LeftForm">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                <h1 >Push yourself<br> & your<br> designs</h1>
+                <p class="Header_LeftForm Header_LeftForm_Text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
                 Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
                 <form action="">
                     <!-- <input class="Input" type="" placeholder="Design Style"> -->
@@ -100,6 +100,54 @@
         </div>
     </div>
     <!-- /.Features-content -->
-    
+    <div class="Design-guidelines">
+        <h3 class="Features-h3">
+            Our Design Design Guidelines
+        </h3>
+        <p class="Features-text">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Minus, impedit. Eius nihil optio unde molestias, voluptatem illo exercitationem amet enim. Porro ratione suscipit aperiam assumenda, repellendus rerum commodi quod aliquam!
+        </p>
+        <ul class="Design-guidelines-buttons">
+            <li class="Design-guidelines-list-item">
+                <button class="Design-guidelines-button">Development</button>
+            </li>
+            <li class="Design-guidelines-list-item">
+                <button class="Design-guidelines-button">Design</button>
+            </li>
+            <li class="Design-guidelines-list-item">
+                <button class="Design-guidelines-button">Business</button>
+            </li>
+            <li class="Design-guidelines-list-item">
+                <button class="Design-guidelines-button">Arts</button>
+            </li>
+        </ul>
+        <ul class="Design-guidelines-listings">
+            <li class="Design-guidelines-listings-item">
+                <a href="#" class="Design-guidelines-listings-img"><img src="./Images/Listing-image_wb.png" alt="Image-listing"></a>
+                <button class="Design-guidelines-listings-button"><span>Design Listing One</span><img src="./Images/listing-arrow-right.png" alt="arrow-right"></button>
+            </li>
+            <li class="Design-guidelines-listings-item">
+                <a href="#" class="Design-guidelines-listings-img"><img src="./Images/Listing-image_wb.png" alt="Image-listing"></a>
+                <button class="Design-guidelines-listings-button"><span>Design Listing One</span><img src="./Images/listing-arrow-right.png" alt="arrow-right"></button>
+            </li>
+            <li class="Design-guidelines-listings-item">
+                <a href="#" class="Design-guidelines-listings-img"><img src="./Images/Listing-image_wb.png" alt="Image-listing"></a>
+                <button class="Design-guidelines-listings-button"><span>Design Listing One</span><img src="./Images/listing-arrow-right.png" alt="arrow-right"></button>
+            </li>
+        </ul>
+    </div>
+    <!-- /.Design-guidelines -->
+    <div class="Ending-title">
+        <div class="Header_LeftForm">
+            <a href="#" class="Ending-arrow-logo"><img src="./Images/Big_header_arrow.png" alt="BigArrow"></a>
+            <div id="Just_Container">
+                <h1 >Push<br> yourself & your designs</h1>
+                <p class="Header_LeftForm_Text">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem.</p>
+                </p>
+            </div>
+        </div>
+
+    </div>    
 </body>
 </html>
